--- a/src/composer.json
+++ b/src/composer.json
@@ -10,7 +10,8 @@
         "darkaonline/l5-swagger": "^9.0",
         "filament/filament": "^3.3",
         "laravel/framework": "^12.0",
-        "laravel/tinker": "^2.10.1"
+        "laravel/tinker": "^2.10.1",
+        "spatie/laravel-permission": "^6.17"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
