--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,14 +7,13 @@ services:
     container_name: qodex_app
     working_dir: /var/www/html
     volumes:
-      #- qodex_laravel:/var/www/html
       - ./src:/var/www/html
     networks:
       - app-network
     depends_on:
       - db
     expose:
-    - "9000" 
+      - "9000"
     command: ["php-fpm"]
 
   webserver:
@@ -23,7 +22,7 @@ services:
     ports:
       - "8000:80"
     volumes:
-      - qodex_laravel:/var/www/html
+      - ./src:/var/www/html
       - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
     networks:
       - app-network
@@ -52,4 +51,3 @@ networks:
 
 volumes:
   mysql_data:
-  qodex_laravel:
